--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -3,8 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c7c9c979-8021-4d15-938f-0aa1bddb2520",
-   "metadata": {},
+   "id": "8022fcd0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-11T00:52:16.879235Z",
+     "iopub.status.busy": "2025-12-11T00:52:16.879083Z",
+     "iopub.status.idle": "2025-12-11T00:52:16.885166Z",
+     "shell.execute_reply": "2025-12-11T00:52:16.884519Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -25,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5f0450c-effb-47ac-b42c-9fd5e821bce7",
+   "id": "8b9b8467",
    "metadata": {},
    "source": [
     "Notebooks can become unreproducible if you do not have access to ALL of the required external dependencies.\n",
@@ -36,8 +43,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2c498369-803d-427c-92f3-2da1e8eaa9fd",
-   "metadata": {},
+   "id": "199f5711",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-11T00:52:16.886672Z",
+     "iopub.status.busy": "2025-12-11T00:52:16.886480Z",
+     "iopub.status.idle": "2025-12-11T00:52:17.073647Z",
+     "shell.execute_reply": "2025-12-11T00:52:17.072855Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -80,8 +94,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8a624b9c-aa8d-4145-8c74-15a6b129fe75",
-   "metadata": {},
+   "id": "f5c7f580",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-11T00:52:17.075603Z",
+     "iopub.status.busy": "2025-12-11T00:52:17.075412Z",
+     "iopub.status.idle": "2025-12-11T00:52:17.739246Z",
+     "shell.execute_reply": "2025-12-11T00:52:17.738237Z"
+    }
+   },
    "outputs": [
     {
      "data": {
